# tha-aws-runner

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/tha_aws_runner/: __init__.py  aws_base.py  cost_tracker.py  ddb_pricing.py  dynamodb.py  errors.py  gsi.py  s3.py  ssm.py  utils.py
tests/: conftest.py  test_aws_base.py  test_cost_tracker.py  test_dynamodb.py  test_gsi.py  test_s3.py  test_ssm.py  test_utils.py
