[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tha-aws-runner"
version = "0.1.10"
description = "A Tabular Helper API library that wraps common AWS services (DynamoDB, S3, SSM) with a typed, consistent interface built on boto3."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Nate Wright" }]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "Typing :: Typed",
]
keywords = ["aws", "boto3", "dynamodb", "ssm", "tabular", "helper"]
dependencies = [
    "boto3>=1.34",
    "botocore>=1.34",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "mypy>=1.10",
    "moto[dynamodb,ssm,sts]>=5.0",
]

[project.urls]
Homepage = "https://github.com/tha-guy-nate/tha-aws-runner"
Issues = "https://github.com/tha-guy-nate/tha-aws-runner/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/tha_aws_runner"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
