[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tha-aws-runner"
version = "0.2.9"
description = "A Tabular Helper API library that wraps common AWS services (DynamoDB, S3, SSM) with a typed, consistent interface built on boto3."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Nate Wright" }]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "Typing :: Typed",
]
keywords = ["aws", "boto3", "dynamodb", "s3", "ssm", "tabular", "helper"]
dependencies = [
    "boto3>=1.34",
    "botocore>=1.34",
    "tqdm>=4.68.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "mypy>=1.10",
    "deptry>=0.25.1",
    "pip-audit>=2.10.1",
    "pytest-cov>=7.1.0",
    "moto[dynamodb,ssm,sts]>=5.0",
]

[project.urls]
Homepage = "https://github.com/tha-guy-nate/tha-aws-runner"
Issues = "https://github.com/tha-guy-nate/tha-aws-runner/issues"
Changelog = "https://github.com/tha-guy-nate/tha-aws-runner/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/tha_aws_runner"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.deptry]
known_first_party = ["tha_aws_runner"]
optional_dependencies_dev_groups = ["dev"]

[tool.coverage.run]
source = ["src"]
